5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4170/executions/1644_2446.log
== TEST (2019-04-16 11:34:39) 
-- CODE:
senha = int(input("Senha: "))
a = (senha//100000)
b = (senha//10000)%10
c = (senha//1000)%10
d = (senha//100)%10
e = (senha//10)%10
f = (senha)%10
calculo = (b+d+f)/(a+c+e)
if(calculo ==0):
	mensagem = "acesso liberado"
	print(mensagem)
else:
	mensagem = "senha invalida"
	print(mensagem)










if (senha)
-- ERROR:
File "XXXX", line 25
    if (senha)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:35:14) 
-- CODE:
senha = int(input("Senha: "))
a = (senha//100000)
b = (senha//10000)%10
c = (senha//1000)%10
d = (senha//100)%10
e = (senha//10)%10
f = (senha)%10
calculo = (b+d+f)/(a+c+e)
if(calculo ==0):
	mensagem = "acesso liberado"
	print(mensagem)
else:
	mensagem = "senha invalida"
	print(mensagem)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:36:19) 
-- CODE:
senha = int(input("Senha: "))
a = (senha//100000)
b = (senha//10000)%10
c = (senha//1000)%10
d = (senha//100)%10
e = (senha//10)%10
f = (senha)%10
calculo = (b+d+f)/(a+c+e)
if(calculo ==0):
	mensagem = "acesso liberado"
	print(mensagem)
else:
	mensagem = "senha invalida"
	print(mensagem)
-- EXECUTION TIME:
0.16045
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:37:10) 
-- CODE:
senha = int(input("Senha: "))
a = (senha//100000)
b = (senha//10000)%10
c = (senha//1000)%10
d = (senha//100)%10
e = (senha//10)%10
f = (senha)%10
calculo = (b+d+f)/(a+c+e)
if(calculo ==0):
	mensagem = "acesso liberado"
	print(mensagem)
else:
	mensagem = "senha invalida"
	print(mensagem)
-- EXECUTION TIME:
0.22904
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:38:09) 
-- CODE:
senha = int(input("Senha: "))
a = (senha//100000)
b = (senha//10000)%10
c = (senha//1000)%10
d = (senha//100)%10
e = (senha//10)%10
f = (senha)%10
calculo = (b+d+f)/(a+c+e)
if(calculo ==0):
	mensagem = "acesso liberado"
	print(mensagem)
else:
	mensagem = "senha invalida"
	print(mensagem)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 11:40:17) 
-- CODE:
senha = int(input("Senha: "))
a = (senha//100000)
b = (senha//10000)%10
c = (senha//1000)%10
d = (senha//100)%10
e = (senha//10)%10
f = (senha)%10
calculo = (b+d+f)%(a+c+e)
if(calculo ==0):
	mensagem = "acesso liberado"
	print(mensagem)
else:
	mensagem = "senha invalida"
	print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 11:40:40) 
-- CODE:
senha = int(input("Senha: "))
a = (senha//100000)
b = (senha//10000)%10
c = (senha//1000)%10
d = (senha//100)%10
e = (senha//10)%10
f = (senha)%10
calculo = (b+d+f)%(a+c+e)
if(calculo ==0):
	mensagem = "acesso liberado"
	print(mensagem)
else:
	mensagem = "senha invalida"
	print(mensagem)
-- EXECUTION TIME:
0.129975
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
